@@ -29,47 +29,43 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-        private final JWTSecurityFilter jwtSecurityFilter;
-        private final AllowedOrigins allowedOrigins;
-        private final UnAuthorizedUserAuthenticationEntryPoint unAuthorizedUserAuthenticationEntryPoint;
+    private final JWTSecurityFilter jwtSecurityFilter;
+    private final AllowedOrigins allowedOrigins;
+    private final UnAuthorizedUserAuthenticationEntryPoint unAuthorizedUserAuthenticationEntryPoint;
 
-        @Bean
-        CorsConfigurationSource corsConfigurationSource() {
-                CorsConfiguration configuration = new CorsConfiguration();
-                configuration.setAllowedOrigins(allowedOrigins.getOrigins());
-                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "DELETE", "PUT"));
-                configuration.setAllowedHeaders(List.of("Authorization"));
-                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-                source.registerCorsConfiguration("/**", configuration);
-                return source;
-        }
+    @Bean
+    CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(allowedOrigins.getOrigins());
+        configuration.setAllowedMethods(
+                Arrays.asList("GET", "POST", "DELETE", "PUT", "PATCH", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
+    }
 
-        @Bean
-        public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
-                return httpSecurity.csrf(csrf -> csrf.disable()).cors(Customizer.withDefaults())
-                                .authorizeHttpRequests(request -> request
-                                                .requestMatchers("/api/v1/auth/**", "/docs",
-                                                                "/v3/api-docs", "/v3/api-docs/**",
-                                                                "/swagger-resources/**",
-                                                                "/swagger-ui.html",
-                                                                "/swagger-ui/**")
-                                                .permitAll().requestMatchers("/api/v1/admin/**")
-                                                .hasRole(Roles.ADMIN.name())
-                                                .requestMatchers("/api/v1/employee/**")
-                                                .hasRole(Roles.EMPLOYEE.name()).anyRequest()
-                                                .authenticated())
-                                .exceptionHandling(exception -> exception.authenticationEntryPoint(
-                                                unAuthorizedUserAuthenticationEntryPoint))
-                                .sessionManagement(session -> session.sessionCreationPolicy(
-                                                SessionCreationPolicy.STATELESS))
-                                .addFilterBefore(jwtSecurityFilter,
-                                                UsernamePasswordAuthenticationFilter.class)
-                                .build();
-        }
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
+        return httpSecurity.csrf(csrf -> csrf.disable()).cors(Customizer.withDefaults())
+                .authorizeHttpRequests(request -> request
+                        .requestMatchers("/api/v1/auth/**", "/docs", "/v3/api-docs",
+                                "/v3/api-docs/**", "/swagger-resources/**", "/swagger-ui.html",
+                                "/swagger-ui/**")
+                        .permitAll().requestMatchers("/api/v1/admin/**").hasRole(Roles.ADMIN.name())
+                        .requestMatchers("/api/v1/employee/**").hasRole(Roles.EMPLOYEE.name())
+                        .anyRequest().authenticated())
+                .exceptionHandling(exception -> exception
+                        .authenticationEntryPoint(unAuthorizedUserAuthenticationEntryPoint))
+                .sessionManagement(
+                        session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .addFilterBefore(jwtSecurityFilter, UsernamePasswordAuthenticationFilter.class)
+                .build();
+    }
 
-        @Bean
-        public AuthenticationManager authenticationManager(
-                        AuthenticationConfiguration authenticationConfiguration) throws Exception {
-                return authenticationConfiguration.getAuthenticationManager();
-        }
+    @Bean
+    public AuthenticationManager authenticationManager(
+            AuthenticationConfiguration authenticationConfiguration) throws Exception {
+        return authenticationConfiguration.getAuthenticationManager();
+    }
 }
